--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mdi",
-  "version": "1.1b",
+  "version": "1.1.0",
   "description": "Medical Device Integration for MOH",
   "main": "server.js",
   "dependencies": {
