--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
 language: node_js
 node_js: 
 - "6"
-before_script: chmod 0777 ./node_modules/.bin/mocha
+install:
+  - npm install phantomjs -g
+  - npm install -g mocha-phantomjs
+  - npm install -g gulp
+  - npm install -g bower
+  - npm install
+  - bower install
+before_script:
+  - phantomjs --version
+  - mocha-phantomjs --version
+  - gulp &
+  - sleep 5 # give gulp background task some time to execute.
+script:
+  - mocha-phantomjs test/index.html
+  - make test
