--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  	"mocha": "^1.18.2",
+    "gulp": "^3.6.1",
+    "gulp-plumber": "^0.6.1",
+    "gulp-jade": "^0.5.0",
+    "gulp-watch": "^0.6.5",
+    "gulp-connect": "^2.0.5"
+  },
   "scripts": {
     "test": "make test",
     "start": "node server.js"
