--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "Medical Device Integration for MOH",
   "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.17.0",
-    "express": "^4.14.1",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "graceful-fs": "^4.1.11",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "mongojs": "^2.4.0",
+    "nconf": "^0.8.4",
+    "pug": "^2.0.0-rc.2",
     "request": "^2.81.0",
-    "request-promise": "^4.2.0"
+    "request-promise": "^4.2.1"
   },
   "devDependencies": {
-  	"mocha": "^1.18.2",
     "gulp": "^3.6.1",
-    "gulp-plumber": "^0.6.1",
+    "gulp-connect": "^2.0.5",
     "gulp-jade": "^0.5.0",
+    "gulp-plumber": "^0.6.1",
     "gulp-watch": "^0.6.5",
-    "gulp-connect": "^2.0.5"
+    "mocha": "^1.21.5"
   },
   "scripts": {
     "test": "make test",
